--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="./public/foodpanda_logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FoodPanda</title>
     <link rel="stylesheet" href="style.css">
